--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "esdoc",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Good Documentation Generator For JavaScript",
   "author": {
-    "name": "h13i32maru",
-    "url": "https://h13i32maru.jp"
+    "name": "JBA-Khalifa",
+    "url": "https://linktr.ee/iamkhalifamba"
   },
   "homepage": "https://esdoc.org/",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/esdoc/esdoc"
+    "url": "https://github.com/setheum-js/esdoc"
   },
   "engines": {
     "node": ">= 6.0.0"
@@ -23,13 +23,12 @@
     "lint": "node ./script/eslint.js"
   },
   "dependencies": {
-    "babel-generator": "6.26.1",
-    "babel-traverse": "6.26.0",
-    "babylon": "6.18.0",
-    "braces": "^2.3.2",
     "cheerio": "1.0.0-rc.2",
     "color-logger": "0.0.6",
     "escape-html": "1.0.3",
+    "babylon": "6.18.0",
+    "babel-generator": "6.26.1",
+    "babel-traverse": "6.26.0",
     "fs-extra": "5.0.0",
     "ice-cap": "0.0.4",
     "marked": "2.0.3",
@@ -48,8 +47,8 @@
     "esdoc-standard-plugin": "latest",
     "esdoc-undocumented-identifier-plugin": "latest",
     "eslint": "4.19.1",
-    "mocha": "5.1.1",
-    "nyc": "11.7.1"
+    "mocha": "8.4.0",
+    "nyc": "15.1.0"
   },
   "keywords": [
     "jsdoc",
