--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "color-logger": "0.0.6",
     "escape-html": "1.0.3",
     "fs-extra": "5.0.0",
-    "ice-cap": "0.0.4",
+    "ice-cap": "^0.0.3",
     "marked": "2.0.3",
     "minimist": "1.2.5",
     "taffydb": "2.7.3"
@@ -38,7 +38,7 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-plugin-istanbul": "4.1.6",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.26.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-register": "6.26.0",
     "codecov": "3.0.1",
     "esdoc-accessor-plugin": "latest",
